@@ -1,3 +1,4 @@
+WARNING: bad17.pdf (trailer, offset 715): dictionary has duplicated key /K; last occurrence overrides earlier ones
 WARNING: bad17.pdf (trailer, offset 715): dictionary ended prematurely; using null as value for last key
 /QTest is implicit
 /QTest is direct and has type null (2)
